<resources>
    <string name="app_name">Study Case 1</string>
    <string name="hint">Nama Menu</string>
    <string name="jumlah_porsi">Jumlah Porsi</string>
    <string name="abnormal">ABNORMAL</string>
    <string name="eatbus">EATBUS</string>
    <string name="makan_malam">Makan Malam</string>
    <string name="dengan_milea">dengan Milea</string>
    <string name="textview">TextView</string>
    <string name="menu">Menu</string>
    <string name="porsi">Porsi</string>
    <string name="no">no.</string>
    <string name="harga">Harga</string>

</resources>
